# protokdb

./: WORKSPACE
.github/workflows/: build.yml
proto/: examples_dynamic.proto
src/: BUILD.bazel  Bold  KdbTypes.h  examples.proto  kdb_type_specifier.proto
