
proto_library(
    name = "kdb_type_specifier_proto",
    srcs = ["kdb_type_specifier.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

proto_library(
    name = "examples_proto",
    srcs = ["examples.proto"],
    visibility = ["//visibility:public"],
    deps = [":kdb_type_specifier_proto"],
)

load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")
cpp_proto_library(
    name = "cpp_examples_proto",
    visibility = ["//visibility:public"],
    protos = [
      ":examples_proto",
      ":kdb_type_specifier_proto"
    ],
)

COPTS = select({
    "//conditions:default": [
        "-DKXVER=3",
        "-Wall",
    ],
})

cc_library(
    name = "protobufkdb_lib",
    srcs = [
        "KdbTypes.cpp",
        "MapValues.cpp",
        "MessageFactory.cpp",
        "MessageFormat.cpp",
        "MessageParser.cpp",
        "ProtobufKdb.cpp",
        "RepeatedValues.cpp",
        "ScalarValues.cpp",
    ],
    hdrs = glob([
        "*.h",
        "src/*.h",
    ]),
    copts = COPTS,
    includes = ["src/", "./"],
    # linkopts = LINK_OPTS,
    visibility = ["//visibility:public"],
    deps = [":cpp_examples_proto"]
)
